--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.TaskGarden">
+        android:theme="@style/Theme.TaskGarden.NoActionBar">
+        <activity
+            android:name=".NavigationDrawer"
+            android:label="@string/title_activity_navigation"
+            android:theme="@style/Theme.TaskGarden.NoActionBar"></activity>
+
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
