- Added a button for activity_main.xml to go to the add_task_form.xml layout
- Updated the build to add reflections -> reflections still are not working

- Updated mainactivity to call TaskFormActivity when the Addnewtask button is pressed in the openform method

- Created TaskFormActivity method

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TaskGarden.NoActionBar">
+        <activity android:name=".TaskFormActivity"></activity>
         <activity
             android:name=".NavigationDrawer"
             android:label="@string/title_activity_navigation"
-            android:theme="@style/Theme.TaskGarden.NoActionBar"></activity>
-
+            android:theme="@style/Theme.TaskGarden.NoActionBar" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
