--- a/build.gradle
+++ b/build.gradle
@@ -7,9 +7,11 @@ buildscript {
         maven { url 'https://dl.bintray.com/kotlin/kotlin-eap' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.2.0'
+        classpath 'com.android.tools.build:gradle:4.2.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.jetbrains.kotlin:kotlin-android-extensions:$kotlin_version"
+
+        classpath("org.jetbrains.dokka:dokka-gradle-plugin:1.4.32")
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
