Added new Activity (CompletedTaskActivity). - loads completed tasks from the database and puts them into a list. - on create, inflates a recyclerview and loads the list from loadCompletedTasks - openMain is a function that when the view is pressed switches back to the main screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TaskGarden.NoActionBar">
-        <activity android:name=".TaskFormActivity"></activity>
+        <activity android:name=".CompletedTasksActivity"></activity>
+        <activity android:name=".TaskFormActivity" />
         <activity
             android:name=".NavigationDrawer"
             android:label="@string/title_activity_navigation"
